tests/integration/snapshots/integration__conformance__i_string_overlong_sequence_2_bytes.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
raw bytes: [91, 34, 192, 175, 34, 93]
stderr ---
error: source did not contain valid utf8
 --> stdin
  |
