tests/integration/snapshots/integration__conformance__i_string_overlong_sequence_6_bytes_null.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
raw bytes: [91, 34, 252, 128, 128, 128, 128, 128, 34, 93]
stdout ---

stderr ---
error: byte 0xFC would start a sequence of 5 or more bytes
 --> stdin:1:3
  |
1 | ["������"]
  |   ^
