tests/integration/snapshots/integration__conformance__i_string_overlong_sequence_6_bytes_null.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: ["format"]
status: 1
success: false
stdin ---
raw bytes: [91, 34, 252, 128, 128, 128, 128, 128, 34, 93]
stdout ---

stderr ---
error: source did not contain valid utf8
 --> stdin
  |
