tests/integration/snapshots/integration__conformance__i_string_truncated-utf-8.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
raw bytes: [91, 34, 224, 255, 34, 93]
stdout ---

stderr ---
error: expected a continuation byte, found 0xFF
 --> stdin:1:3
  |
1 | ["��"]
  |   ^
