tests/integration/snapshots/integration__conformance__i_string_utf-16le_with_bom.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
raw bytes: [255, 254, 91, 0, 34, 0, 233, 0, 34, 0, 93, 0]
stdout ---

stderr ---
error: byte 0xFF would start a sequence of 5 or more bytes
 --> stdin:1:1
  |
1 | ��[␀"␀�␀"␀]␀
  | ^
