tests/integration/snapshots/integration__conformance__i_string_utf-16le_with_bom.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdout ---
raw bytes: [255, 254, 91, 0, 34, 0, 233, 0, 34, 0, 93, 0]
stderr ---
error: source did not contain valid utf8
 --> stdin
  |
